--- a/trunk/sim/plugins/_core/_core.vcproj
+++ b/trunk/sim/plugins/_core/_core.vcproj
@@ -6331,7 +6331,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6341,7 +6341,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6355,7 +6355,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6365,7 +6365,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6379,7 +6379,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6389,7 +6389,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6403,7 +6403,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6413,7 +6413,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6427,7 +6427,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6437,7 +6437,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6451,7 +6451,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6461,7 +6461,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6475,7 +6475,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6485,7 +6485,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6499,7 +6499,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6509,7 +6509,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6523,7 +6523,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6533,7 +6533,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6547,7 +6547,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6557,7 +6557,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6571,7 +6571,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6581,7 +6581,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6594,7 +6594,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6603,7 +6603,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6617,7 +6617,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6627,7 +6627,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6641,7 +6641,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6651,7 +6651,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6665,7 +6665,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6675,7 +6675,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6689,7 +6689,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6699,7 +6699,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6713,7 +6713,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6723,7 +6723,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
@@ -6737,7 +6737,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6747,7 +6747,7 @@
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
 						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
-						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
+						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
 			</File>
