--- a/branches/branch-QString/plugins/_core/_core.vcproj
+++ b/branches/branch-QString/plugins/_core/_core.vcproj
@@ -6588,7 +6588,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\styles\SIM.5.2.2.xsl"
+				RelativePath="styles\SIM.5.2.2.xsl"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -7389,6 +7389,286 @@
 						Name="VCCustomBuildTool"
 						CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.png $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\additional.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp&#x0D;&#x0A;"
 						Outputs="$(OutDir)\icons\additional.jisp"
+					/>
+				</FileConfiguration>
+			</File>
+		</Filter>
+		<Filter
+			Name="icq5"
+			>
+			<File
+				RelativePath=".\icq5\00.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\01.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\02.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\03.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\04.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\05.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\06.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\07.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\08.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\09.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\10.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\11.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\12.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\13.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\14.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\15.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\16.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\17.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\18.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\19.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\20.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\21.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\22.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\23.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\24.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\25.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\26.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\27.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5\icondef.xml"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Make icq5.jisp"
+						CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.png $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\icq5.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp"
+						Outputs="$(OutDir)\icons\icq5.jisp"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Make icq5.jisp"
+						CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.png $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\icq5.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp"
+						Outputs="$(OutDir)\icons\icq5.jisp"
+					/>
+				</FileConfiguration>
+			</File>
+		</Filter>
+		<Filter
+			Name="icq5.1"
+			>
+			<File
+				RelativePath=".\icq5.1\0.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\1.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\10.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\11.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\12.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\13.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\14.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\15.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\16.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\17.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\18.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\19.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\2.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\20.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\21.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\22.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\23.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\24.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\25.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\26.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\27.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\3.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\4.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\5.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\6.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\7.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\8.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\9.png"
+				>
+			</File>
+			<File
+				RelativePath=".\icq5.1\icondef.xml"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Make icq5.1.jisp"
+						CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.png $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\icq5.1.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp"
+						Outputs="$(OutDir)\icons\icq5.1.jisp"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Make icq5.1.jisp"
+						CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.png $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\icq5.1.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp"
+						Outputs="$(OutDir)\icons\icq5.1.jisp"
 					/>
 				</FileConfiguration>
 			</File>
