--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -64,6 +64,13 @@ if(OPENSSL_FOUND)
   TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES})
 endif(OPENSSL_FOUND)
 
+IF(USE_KDE3)
+  ADD_DEFINITIONS(${KDE3_DEFINITIONS})
+  INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS})
+  LINK_DIRECTORIES(${KDE3_LIB_DIR})
+  TARGET_LINK_LIBRARIES(simlib ${QT_AND_KDECORE_LIBS} kdeui kio)
+ENDIF(USE_KDE3)
+
 # we need wsock32 on win32
 if (WIN32)
   TARGET_LINK_LIBRARIES(simlib wsock32)
