--- a/branches/branch-playground/sim/CMakeLists.txt
+++ b/branches/branch-playground/sim/CMakeLists.txt
@@ -96,7 +96,6 @@ SET(sim_LIB_HDRS
 	)
 
 # moc the sources
-#KDE3_AUTOMOC(${sim_LIB_HDRS})
 QT4_WRAP_CPP(MOC_SRCS ${sim_LIB_HDRS})
 SOURCE_GROUP(MOC-Files FILES ${MOC_SRCS})
 
@@ -126,11 +125,9 @@ if(OPENSSL_FOUND)
   TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES} ${OPENSSL_EAY_LIBRARIES})
 endif(OPENSSL_FOUND)
 
-IF(ENABLE_KDE3)
-  ADD_DEFINITIONS(${KDE3_DEFINITIONS})
-  LINK_DIRECTORIES(${KDE3_LIB_DIR})
-  TARGET_LINK_LIBRARIES(simlib ${QT_AND_KDECORE_LIBS} kdeui kio)
-ENDIF(ENABLE_KDE3)
+IF(ENABLE_KDE4)
+  TARGET_LINK_LIBRARIES(simlib ${KDE4_KDECORE_LIBRARY} ${KDE4_KDEUI_LIBRARY} ${KDE4_KIO_LIBRARY})
+ENDIF(ENABLE_KDE4)
 
 # we need wsock32 on win32
 if (WIN32)
