--- a/branches/branch-playground/sim/CMakeLists.txt
+++ b/branches/branch-playground/sim/CMakeLists.txt
@@ -48,7 +48,6 @@ SET(sim_LIB_SRCS
 		qzip/ioapi.c
 		qzip/qzip.cpp
 		qzip/unzip.c
-		simfs.cpp
 	)
 SET(sim_LIB_HDRS
 	    aboutdata.h
@@ -94,7 +93,6 @@ SET(sim_LIB_HDRS
 		qzip/qzip.h
 		qzip/unzip.h
 		fetchclientprivate.h
-		simfs.h
 	)
 
 # moc the sources
@@ -121,11 +119,13 @@ ADD_DEFINITIONS(-DNOUNCRYPT)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 # openssl is optional
-if(OPENSSL_FOUND)
-  LINK_DIRECTORIES(${OPENSSL_LIBRARY_DIR})
+IF(OPENSSL_FOUND)
   INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
-  TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES} ${OPENSSL_EAY_LIBRARIES})
-endif(OPENSSL_FOUND)
+  TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES})
+  IF(NOT WIN32)
+    TARGET_LINK_LIBRARIES(simlib crypto)
+  ENDIF(NOT WIN32)
+ENDIF(OPENSSL_FOUND)
 
 IF(ENABLE_KDE4)
   TARGET_LINK_LIBRARIES(simlib ${KDE4_KDECORE_LIBRARY} ${KDE4_KDEUI_LIBRARY} ${KDE4_KIO_LIBRARY})
